--- a/TODO.txt
+++ b/TODO.txt
@@ -2408,6 +2408,61 @@ a Shortbow and a Quiver of 20 Arrows (or) a Stone Shortsword
 a Burglar's Pack (or) an Dungeoneer's Pack (or) an Explorer's Pack
 Leather Tunic, 2 Stone Daggers, and Thieves’ tools
 
+Abilities:
+
+Abilities:
+
+-------------------
+ PROF Bonus Table 
+-------------------
+Level --- Bonus ---
+1-4   ---  +2   ---
+5-8   ---  +3   ---
+9-12  ---  +4   ---
+13-16 ---  +5   ---
+17-20 ---  +6   ---
+
+-------------------------------------------------------------------------------------------------------------------------------------------
+                                              Spell Slot Table*
+-------------------------------------------------------------------------------------------------------------------------------------------
+Level --- Cantrips Known --- LVL 1 --- LVL 2 --- LVL 3 --- LVL 4 --- LVL 5 --- LVL 6 --- LVL 7 --- LVL 8 --- LVL 9 --- Max Spells Known ---
+  1    ---      1     ----     0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        1         ---
+  2    ---      1     ----     0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        2         ---
+  3    ---      1     ----     1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        3         ---
+  4    ---      1     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  5    ---      1     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  6    ---      2     ----     2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        4         ---
+  7    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        5         ---
+  8    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  9    ---      2     ----     3   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        6         ---
+  10   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        7         ---
+  11   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  12   ---      3     ----     3   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        8         ---
+  13   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        9         ---
+  14   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  15   ---      3     ----     3   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        10        ---
+  16   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  17   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  18   ---      4     ----     3   ---   2   ---   2   ---   0   ---   0   ---   0   ---   0   ---   0   ---   0   ---        11        ---
+  19   ---      4     ----     3   ---   2   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---        12        ---
+  20   ---      4     ----     3   ---   2   ---   2   ---   1   ---   0   ---   0   ---   0   ---   0   ---   0   ---        13        ---
+* Rogues do not learn spells naturally.
+
+- LVL 1 -
+
+Expertise
+Choose two of your skill proficiencies.
+You double your proficiency bonus with these skills.
+You may also choose theives tools to gain this bonus.
+ 
+Sneak Attack 1
+You deal an additional 3 damage with finnese or ranged weapons
+when you have advantage against the target.
+
+Thieves Cant
+
+
+
 --- Sorcerer ---
 
 Base HP: 6
